# game-of-thrones-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.qdrant  README.md  agent.py  api.py  app_streamlit.py  build_index.py  chunking.py  cli.py  config.py  docker-compose.yml  ingest_mwparser.py  main.py  models.py  pyproject.toml  rag.py  railway.toml  retrieval.py  selftest_offline.py  setup_source_data.py
docker/: entrypoint.sh
