[project]
name = "game-of-thrones-rag"
version = "0.1.0"
description = "Agentic hybrid RAG over a Game of Thrones wiki corpus (LangChain + LangGraph)."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    # LLM communication is done through LangChain
    "langchain>=0.3.27",
    "langchain-core>=0.3.75",
    "langchain-openai>=0.3.33",
    "langchain-cohere>=0.4.5",
    # Agentic workflows
    "langgraph>=0.6.7",
    # Retrieval / storage
    "qdrant-client>=1.18.0",
    "rank-bm25>=0.2.2",
    # Config / serving
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "fastapi>=0.137.1",
    "uvicorn>=0.49.0",
    "streamlit>=1.58.0",
]

[project.optional-dependencies]
# Wikimedia-dump ingestion is a SEPARATE, manually-triggered step.
# These packages are not needed to build the index, serve, or deploy the app.
#   uv sync --extra ingest
ingest = [
    "mwparserfromhell>=0.7.2",
    "mwxml>=0.3.8",
    "py7zr>=0.22.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.405",
    # Same versions as the `ingest` extra — needed for Pyright/Pylance on ingest scripts
    "mwparserfromhell>=0.7.2",
    "mwxml>=0.3.8",
    "py7zr>=0.22.0",
]

[tool.uv]
package = false

# --------------------------------------------------------------------------- #
# Static type checking
# --------------------------------------------------------------------------- #
[tool.pyright]
venvPath = "."
venv = ".venv"
include = [
    "agent.py",
    "api.py",
    "app_streamlit.py",
    "build_index.py",
    "chunking.py",
    "cli.py",
    "config.py",
    "ingest_mwparser.py",
    "setup_source_data.py",
    "models.py",
    "rag.py",
    "retrieval.py",
    "selftest_offline.py",
]
exclude = [
    "**/__pycache__",
    ".venv",
    "extracted_data",
    "source_data",
    "qdrant_data",
]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingModuleSource = "none"
